--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -35,11 +35,15 @@
 
 
     .projectShapesDiv-bottom-right {
-        /* right: -95px; */
-        transform: scale(1.5);
+        /* transform: scale(1.5);
         filter: blur(2px);
         right: -14px;
-        bottom: 113px;
+        bottom: 113px; */
+
+        transform: scale(1.3);
+        filter: blur(2px);
+        right: -76px;
+        bottom: -21px;
     }
 
     .projet1_topleftShape_desktop {
@@ -55,8 +59,8 @@
     .desktopSlideMargin {
         /* margin: 10px 5% 50px 5%; */
         margin: 10px 7% 50px 7%;
-        border-top-left-radius: 57px;
-        border-bottom-right-radius: 57px;
+        border-top-left-radius: 60px;
+        border-bottom-right-radius: 60px;
     }
 
     /* Grid CV */
@@ -222,13 +226,15 @@
         /* padding-bottom: 67px;  */
         margin-bottom: 0px;
 
-        background-color: #0000000f;
+        background-color: #00000000;
         border-radius: 37px;
     }
 
 
     .projectDescriptionHeader {
+        overflow: visible;
         padding: 2px 0px 0px 0px;
+        background-color: #ffffff00;
     }
 
 
