--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -1,5 +1,6 @@
 :root {
-    --primaryColor: #2da8ef;
+    /* --primaryColor: #2da8ef; */
+    --primaryColor: #3194e1;
     --white: rgb(251, 253, 253);
 }
 
@@ -37,24 +38,55 @@ body {
 }
 
 
+a {
+    text-decoration: none;
+}
+
+
 
 .wrapper {
-    position: absolute;
+    position: relative;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -65%);
 
-    padding: 100px 100px;
+    padding: 100px 0px;
 
 
     display: inline-flex;
     align-items: baseline;
 }
 
+
+.sectionPresentation {
+    font-family: Open Sans,sans-serif;
+    position: relative;
+    bottom: 50px;
+
+    width: 80%;
+    margin: 0 auto;
+
+    opacity: 0;
+    animation: fadeInSectionPresentation 1s 2.5s ease forwards;
+}
+@keyframes fadeInSectionPresentation {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
 .bonjourSvgContainer {
     width: 250px;
     height: 250px; 
+
+    border-bottom-left-radius: 21px;
 }
+
+
 .bonjourSvgPath {
     opacity: 1;
     /* transform: scale(10); */
@@ -69,12 +101,15 @@ body {
 
     animation: logoColorSwitch 1.5s 1.7s ease forwards;
 }
+
+
 @keyframes logoColorSwitch {
     from {
         stroke: var(--primaryColor); 
     }
     to {
-        stroke: var(--white); 
+        /* stroke: var(--white);  */
+        stroke: #ffc862;
     }
 }
 
@@ -123,18 +158,56 @@ body {
 
 
 
+.presentationParagraph {
+    font-family: Open Sans,sans-serif;
+    color: var(--white);
+    width: 80%;
+    margin: 0 auto;
+    text-align: left;
+}
+
+
+
+
+strong {
+    color: #ffcb6c;
+}
+
+
+
+
+.socialsDiv {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+
+    font-size: 2em;
+}
+
+.socialsDiv a {
+    color: var(--white);
+}
 
 
 
 
 
+.portfolioLink {
+    position: relative;
+    color: #1e356b;
+    margin: 40px auto 40px auto;
+    width: fit-content;
+    padding: 12px 16px;
+    background-color: #ffc862;
+    border-radius: 5px;
+    display: block;
+    text-align: center;
+    font-weight: bold;
 
-
-
-
-
-
-
+    border: 1px solid #2892cf;
+}
 
 
 
@@ -152,6 +225,27 @@ body {
         display: none;
     }
 
+
+
+    .wrapper {
+        position: relative;
+        top: 0px;
+        left: 50%;
+        transform: translate(-50%, -0%);
+        padding: 15px 0px 15px 0px;
+
+    }
+
+
+
+    .sectionPresentation {
+        position: relative;
+        /* bottom: 50px; */
+        /* bottom: 130px; */
+        bottom: 0;
+
+        width: 100%;
+    }
 
 
     .bonjourSvgContainer {
@@ -189,4 +283,58 @@ body {
             color: var(--white);
         }
     }
+
+
+
+    .presentationParagraph {
+        font-family: Open Sans,sans-serif;
+        color: var(--white);
+        width: 80%;
+        margin: 0 auto;
+        text-align: justify;
+
+        background-color: #00000026;
+        padding: 13px 15px;
+        border-radius: 12px;
+    }
+
+
+    .portfolioLink {
+        position: relative;
+        margin: 40px auto 40px auto;
+        width: fit-content;
+        /* padding: 10px 16px; */
+        padding: 12px 16px;
+        background-color: #ffc862;
+        border-radius: 5px;
+        display: block;
+        text-align: center;
+        font-weight: bold;
+    }
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* 2K FHD */
+@media only screen and (min-width: 1300px) {
+
+    .presentationParagraph {
+        width: 70%;
+    }
+
 }
