--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -5,6 +5,27 @@
 }
 
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 
 
 
@@ -19,11 +40,13 @@
 }
 
 
+
 body {
-    width: 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
+
+    overflow: hidden;
 
     background-color: var(--white);
     animation: bodyBgColorFadeIn 1.5s 1.7s ease forwards;
@@ -86,6 +109,18 @@ a {
     border-bottom-left-radius: 21px;
 }
 
+.basileSvgContainer {
+    /* width: 250px;
+    height: 250px;  */
+
+    width: 19px;
+    height: 18px;
+    border-bottom-left-radius: 0px;
+
+    transform: translateY(1px);
+    margin-left: 3px;
+}
+
 
 .bonjourSvgPath {
     opacity: 1;
@@ -103,6 +138,24 @@ a {
 }
 
 
+
+.basileSvgPath {
+    opacity: 1;
+    /* transform: scale(10); */
+
+    fill: none; 
+    stroke: var(--white); 
+    stroke-width: 2px; 
+    stroke-linecap: square; 
+    stroke-linejoin:  miter; 
+    stroke-miterlimit: 4;
+    transition: stroke 0.8s ease;
+
+    
+    /* animation: logoColorSwitch 1.5s 1.7s ease forwards; */
+}
+
+
 @keyframes logoColorSwitch {
     from {
         stroke: var(--primaryColor); 
@@ -114,6 +167,24 @@ a {
 }
 
 
+.extensionFunTitle {
+    color: #ffcb6c;
+    font-family: Open Sans,sans-serif;
+    position: relative;
+    bottom: 13px;
+    letter-spacing: 1px;
+
+    opacity: 0;
+    animation: fadeIn 1s 2.7s ease forwards;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 
 .bonjourTxt {
@@ -164,6 +235,11 @@ a {
     width: 80%;
     margin: 0 auto;
     text-align: left;
+}
+
+.wrapperName {
+    display: inline-flex;
+    align-items: baseline;
 }
 
 
@@ -253,11 +329,26 @@ strong {
         height: 130px; 
     }
 
+    .basileSvgContainer {
+        /* width: 130px;
+        height: 130px;  */
+        width: 17px;
+        height: 18px;
+        border-bottom-left-radius: 0px;
+
+        transform: translateY(1px);
+        margin-left: 3px;
+    }
+
 
     .bonjourSvgPath {
         stroke-width: 11;
     }
 
+    .basileSvgPath {
+        stroke-width: 2px;
+        transform: rotateY(25deg);
+    }
 
     .bonjourTxt {
         font-size: 3.5em;
