--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -46,7 +46,7 @@ body {
     margin: 0;
     padding: 0;
 
-    overflow: hidden;
+    /* overflow: hidden; */
 
     background-color: var(--white);
     animation: bodyBgColorFadeIn 1.5s 1.7s ease forwards;
@@ -69,11 +69,14 @@ a {
 
 .wrapper {
     position: relative;
-    top: 35%;
+    /* top: 35%;
     left: 50%;
-    transform: translate(-50%, -65%);
+    transform: translate(-50%, -65%); */
+    left: 50%;
+    transform: translateX(-50%);
 
-    padding: 100px 0px;
+    /* padding: 100px 0px; */
+    margin: 50px 0px 30px 0px;
 
 
     display: inline-flex;
@@ -84,7 +87,7 @@ a {
 .sectionPresentation {
     font-family: Open Sans,sans-serif;
     position: relative;
-    bottom: 50px;
+    /* bottom: 50px; */
 
     width: 80%;
     margin: 0 auto;
@@ -172,7 +175,9 @@ a {
     font-family: Open Sans,sans-serif;
     position: relative;
     bottom: 13px;
+    right: 35px;
     letter-spacing: 1px;
+    font-size: 2em;
 
     opacity: 0;
     animation: fadeIn 1s 2.7s ease forwards;
@@ -260,11 +265,9 @@ strong {
     gap: 60px;
 
     font-size: 2em;
+    margin-bottom: 50px;
 }
 
-.socialsDiv a {
-    color: var(--white);
-}
 
 
 
@@ -273,7 +276,7 @@ strong {
 .portfolioLink {
     position: relative;
     color: #1e356b;
-    margin: 40px auto 40px auto;
+    margin: 40px auto 30px auto;
     width: fit-content;
     padding: 12px 16px;
     background-color: #ffc862;
@@ -283,10 +286,25 @@ strong {
     font-weight: bold;
 
     border: 1px solid #2892cf;
+
+    transition: all 0.3s;
+}
+.portfolioLink:hover {
+    color: #ffc862;
+    background-color: #1e356b;
+    letter-spacing: 1px;
 }
 
 
+.socialBtn {
+    color: var(--white);
 
+    transition: all 0.3s;
+}
+.socialBtn:hover {
+    color: #ffc862;
+    transform: scale(1.3);
+}
 
 
 
@@ -425,7 +443,7 @@ strong {
 @media only screen and (min-width: 1300px) {
 
     .presentationParagraph {
-        width: 70%;
+        width: 65%;
     }
 
 }
