--- a/css/styleCandidature2.css
+++ b/css/styleCandidature2.css
@@ -83,6 +83,16 @@ time, mark, audio, video {
 }
 
 
+.disclaimer {
+    color: rgb(207, 207, 207);
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    /* bottom: 0; */
+    top:97%;
+    font-style: italic;
+}
+
 
 body {
     height: 120vh;
