--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -1,6 +1,6 @@
 :root {
     /* --primaryColor: #2da8ef; */
-    --primaryColor: #3194e1;
+    --primaryColor: #005598;
     --white: rgb(251, 253, 253);
 }
 
@@ -42,14 +42,16 @@ time, mark, audio, video {
 
 
 body {
-    height: 100vh;
+    height: 120vh;
     margin: 0;
     padding: 0;
+
+    position: relative;
 
     /* overflow: hidden; */
 
     background-color: var(--white);
-    animation: bodyBgColorFadeIn 1.5s 1.7s ease forwards;
+    animation: bodyBgColorFadeIn 1.5s 1.7s ease forwards, animBg 15s 3.2s ease infinite;
 }
 @keyframes bodyBgColorFadeIn {
     from {
@@ -59,6 +61,180 @@ body {
         background-color: var(--primaryColor);
     }
 }
+@keyframes animBg {
+    0% {
+        background-color: var(--primaryColor);
+    }
+    33% {
+        background-color: #00569882;
+    }
+    66% {
+        background-color: #00569882;
+    }
+    100% {
+        background-color: var(--primaryColor);
+    }
+}
+
+.bonjourBackgroundImg {
+    position: absolute;
+    width: 100%;
+    height: inherit;
+
+    opacity: 0;
+    animation: fadeInBgImg 0.8s 0s ease forwards;
+}
+@keyframes fadeInBgImg {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0.4;
+    }
+}
+
+.hotAirBallonImg {
+    position: absolute;
+    height: 100px;
+    filter: drop-shadow(2px 1px 2px #1f69a9);
+
+    right: 80px;
+    bottom: 300px;
+    opacity: 0;
+
+    animation: hotAirBallonAnim 35s 3s ease forwards 1, fixedBallon 5.5s 38s ease-in-out infinite;
+}
+@keyframes hotAirBallonAnim {
+    0% {
+        opacity: 0;
+        /* filter: blur(1px); */
+        bottom: 300px;
+        right: 80px;
+    }
+    10% {
+        opacity: 1;
+        /* filter: blur(0px); */
+        right: 110px;
+    }
+    20% {
+        opacity: 0.8;
+        /* filter: blur(1px); */
+        right: 80px;
+    }
+    30% {
+        opacity: 1;
+        /* filter: blur(0px); */
+        right: 110px;
+    }
+    40% {
+        opacity: 0.8;
+        /* filter: blur(1px); */
+        right: 80px;
+    }
+    50% {
+        opacity: 1;
+        /* filter: blur(0px); */
+        right: 110px;
+    }
+    60% {
+        opacity: 0.8;
+        /* filter: blur(1px); */
+    
+        right: 80px;
+    }
+    70% {
+        opacity: 1;
+        /* filter: blur(0px); */
+        right: 110px;
+    }
+    80% {
+        opacity: 0.8;
+        /* filter: blur(1px); */
+        right: 80px;
+    }
+    90% {
+        opacity: 1;
+        /* filter: blur(0px); */
+        right: 110px;
+    }
+    100% {
+        opacity: 0.95;
+        /* filter: blur(1px); */
+        bottom: 700px;
+
+        right: 110px;
+    }
+}
+@keyframes fixedBallon {
+    0% {
+        right: 110px;
+        bottom: 700px;
+    }
+    25% {
+        
+    }
+    50% {
+        /* right: 90px; */
+        bottom: 680px;
+    }
+    75% {
+    }
+    100% {
+        right: 110px;
+        bottom: 700px;
+    }
+}
+
+
+.planeImg {
+    position: absolute;
+    width: 75px;
+    opacity: 0;
+    right: 0;
+    top: 70%;
+    filter: drop-shadow(1px 1px 1px #1f69a9);
+
+    animation: planeMove 27s 2s linear forwards infinite;
+}
+@keyframes planeMove {
+    0% {
+        opacity: 0;
+        top: 70%;
+        right: 0;
+    }
+    10% {
+        opacity: 0.9;
+    }
+    90% {
+        opacity: 0.9;
+    }
+    100% {
+        opacity: 0;
+        top: 20%;
+        right: 120%;
+    }
+}
+
+
+.forestPng {
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    bottom: 0;
+    left: 0;
+    
+    opacity: 0;
+    animation: fadeInForest 1.5s 0.7s ease forwards;
+}
+@keyframes fadeInForest {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0.9;
+    }
+}
+
 
 
 a {
@@ -69,6 +245,7 @@ a {
 
 .wrapper {
     position: relative;
+    z-index: 15;
     /* top: 35%;
     left: 50%;
     transform: translate(-50%, -65%); */
@@ -83,10 +260,18 @@ a {
     align-items: baseline;
 }
 
+.disclaimer {
+    position: relative;
+    z-index: 15;
+    color: white;
+    text-align: center;
+    width: 100%;
+}
 
 .sectionPresentation {
     font-family: Open Sans,sans-serif;
     position: relative;
+    z-index: 11;
     /* bottom: 50px; */
 
     width: 80%;
@@ -110,6 +295,17 @@ a {
     height: 250px; 
 
     border-bottom-left-radius: 21px;
+
+    animation: dropShadow 0.5s 2s ease forwards;
+
+}
+@keyframes dropShadow {
+    from {
+        filter: none;
+    }
+    to {
+        filter: drop-shadow(1px 1px 2px #1f69a9);
+    }
 }
 
 .basileSvgContainer {
@@ -209,6 +405,8 @@ a {
     display: block;
     overflow: hidden;
 
+    text-shadow: 2px 2px #e09000;
+
     animation: fadeInText 1.5s 1.7s ease forwards;
 }
 
@@ -240,6 +438,11 @@ a {
     width: 80%;
     margin: 0 auto;
     text-align: left;
+
+    background-color: #194e7dc9;
+    padding: 13px 17px;
+    border-radius: 12px;
+    box-shadow: 3px 3px 1px 1px #deb873;
 }
 
 .wrapperName {
@@ -278,14 +481,15 @@ strong {
     color: #1e356b;
     margin: 40px auto 30px auto;
     width: fit-content;
-    padding: 12px 16px;
+    padding: 14px 16px;
     background-color: #ffc862;
     border-radius: 5px;
     display: block;
     text-align: center;
     font-weight: bold;
+    box-shadow: 5px 5px #002a4c;
 
-    border: 1px solid #2892cf;
+    /* border: 1px solid #2892cf; */
 
     transition: all 0.3s;
 }
@@ -293,6 +497,8 @@ strong {
     color: #ffc862;
     background-color: #1e356b;
     letter-spacing: 1px;
+
+    box-shadow: 5px 5px #ffc862;
 }
 
 
@@ -319,7 +525,32 @@ strong {
         display: none;
     }
 
+    body {
+        height: 150vh;
+    }
 
+    .bonjourBackgroundImg {
+        object-fit: cover;
+    }
+
+    .extensionFunTitle {
+        color: #ffcb6c;
+        font-family: Open Sans,sans-serif;
+        position: absolute;
+        bottom: 7px;
+        right: 19px;
+        text-shadow: 0px 0px 2px #0000008f;
+        letter-spacing: 1px;
+        font-size: 1.5em;
+        opacity: 0;
+
+        animation: fadeIn 1s 2.7s ease forwards;
+    }
+
+    .forestPng {
+        width: auto;
+        object-fit: cover;
+    }
 
     .wrapper {
         position: relative;
@@ -345,7 +576,18 @@ strong {
     .bonjourSvgContainer {
         width: 130px;
         height: 130px; 
+
+        animation: dropShadow 0.5s 2s ease forwards;
     }
+    @keyframes dropShadow {
+        from {
+            filter: none;
+        }
+        to {
+            filter: drop-shadow(1px 2px 3px black);
+        }
+    }
+
 
     .basileSvgContainer {
         /* width: 130px;
@@ -402,7 +644,7 @@ strong {
         margin: 0 auto;
         text-align: justify;
 
-        background-color: #00000026;
+        background-color: #194e7de8;
         padding: 13px 15px;
         border-radius: 12px;
     }
@@ -413,7 +655,7 @@ strong {
         margin: 40px auto 40px auto;
         width: fit-content;
         /* padding: 10px 16px; */
-        padding: 12px 16px;
+        padding: 14px 16px;
         background-color: #ffc862;
         border-radius: 5px;
         display: block;
