--- a/css/styleCandidature2.css
+++ b/css/styleCandidature2.css
@@ -95,7 +95,7 @@ time, mark, audio, video {
 
 
 body {
-    height: 120vh;
+    height: 110vh;
     margin: 0;
     padding: 0;
 
@@ -791,7 +791,7 @@ strong {
     color: var(--secondaryColor);
 
     left: -240px;
-    text-shadow: 10px 10px black;
+    text-shadow: 10px 10px var(--primaryColor);
 
     position: absolute;
     bottom: 0;
@@ -808,6 +808,99 @@ strong {
     }
 }
 
+
+
+.shiny
+{
+  color: var(--secondaryColor);
+  background: -webkit-gradient(linear, left top, left bottom, from(#F5C21B), to(#D17000));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+  font-family: GothamCondensed;
+  font-size: 6.5em;
+  /* font-weight: 900; */
+  /* position: relative; */
+  /* text-transform: uppercase; */
+
+  left: -240px;
+  position: absolute;
+  bottom: 0;
+
+  opacity: 0;
+  animation: fadeInYouWantMeTxt 0.7s 3s ease forwards;
+}
+
+.shiny::before
+{
+	background-position: -180px;
+	-webkit-animation: flare 5s infinite;
+  -webkit-animation-timing-function: linear;
+  background-image: linear-gradient(65deg, transparent 20%, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.3) 27%, transparent 27%, transparent 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  content: "Shiny";
+  color: #FFF;
+  display: block;
+  padding-right: 140px;
+  position: absolute;
+}
+.shiny::after
+{
+  content: "YOU WANT ME";
+  color: #FFF;
+  display: block;
+  position: absolute;
+  text-shadow: 0 1px #6E4414, 0 2px #6E4414, 0 3px #6E4414, 0 4px #6E4414, 0 5px #6E4414, 0 6px #6E4414, 0 7px #6E4414, 0 8px #6E4414, 0 9px #6E4414, 0 10px #6E4414;
+  top: 0;
+  z-index: -9;
+}
+
+.inner-shiny::after, .inner-shiny::before
+{
+		-webkit-animation: sparkle 5s infinite;
+  -webkit-animation-timing-function: linear;
+	background: #FFF;
+  border-radius: 100%;
+  box-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #FFF, 0 0 25px #FFF, 0 0 30px #FFF, 0 0 35px #FFF;
+  content: "";
+  display: block;
+  height: 10px;
+  opacity: 0.7;
+  position: absolute;
+  width: 10px;
+}
+
+.inner-shiny::before
+{
+	-webkit-animation-delay: 0.2s;
+  height: 7px;
+  left: 0.12em;
+  top: 0.8em;
+  width: 7px;
+}
+
+.inner-shiny::after
+{
+  top: 0.32em;
+  right: -5px;
+}
+
+@-webkit-keyframes flare
+{
+  0%   { background-position: -180px; }
+  30%  { background-position: 500px; }
+  100% { background-position: 500px; }
+}
+
+@-webkit-keyframes sparkle
+{
+  0%   { opacity: 0; }
+  30%  { opacity: 0; }
+  40%  { opacity: 0.8; }
+  60%  { opacity: 0; }
+  100% { opacity: 0; }
+}
 
 
 
@@ -878,7 +971,10 @@ strong {
 
 
     body {
-        height: 140vh; 
+        height: 145vh; 
+    }
+    .disclaimer { 
+        top: 135vh;
     }
 
     .content {
