--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -58,12 +58,12 @@ body {
         background-color: var(--white);
     }
     to {
-        background-color: var(--primaryColor);
+        background-color: #005698ca;
     }
 }
 @keyframes animBg {
     0% {
-        background-color: var(--primaryColor);
+        background-color: #005698ca;
     }
     33% {
         background-color: #00569882;
@@ -72,7 +72,7 @@ body {
         background-color: #00569882;
     }
     100% {
-        background-color: var(--primaryColor);
+        background-color: #005698ca;
     }
 }
 
@@ -217,6 +217,7 @@ body {
 
 
 .forestPng {
+    filter: saturate(1.6);
     position: absolute;
     width: 100%;
     z-index: 10;
@@ -294,7 +295,7 @@ a {
     width: 250px;
     height: 250px; 
 
-    border-bottom-left-radius: 21px;
+    border-bottom-left-radius: 34px;
 
     animation: dropShadow 0.5s 2s ease forwards;
 
@@ -304,7 +305,7 @@ a {
         filter: none;
     }
     to {
-        filter: drop-shadow(1px 1px 2px #1f69a9);
+        filter: drop-shadow(1px 1px 0px #1f69a9);
     }
 }
 
