--- a/css/styleCandidature.css
+++ b/css/styleCandidature.css
@@ -1,5 +1,4 @@
 :root {
-    /* --primaryColor: #2da8ef; */
     --primaryColor: #005598;
     --white: rgb(251, 253, 253);
 }
@@ -42,47 +41,23 @@ time, mark, audio, video {
 
 
 body {
-    height: 120vh;
     margin: 0;
     padding: 0;
 
     position: relative;
 
-    /* overflow: hidden; */
 
     background-color: var(--white);
-    animation: bodyBgColorFadeIn 1.5s 1.7s ease forwards, animBg 15s 3.2s ease infinite;
-}
-@keyframes bodyBgColorFadeIn {
-    from {
-        background-color: var(--white);
-    }
-    to {
-        background-color: #005698ca;
-    }
-}
-@keyframes animBg {
-    0% {
-        background-color: #005698ca;
-    }
-    33% {
-        background-color: #00569882;
-    }
-    66% {
-        background-color: #00569882;
-    }
-    100% {
-        background-color: #005698ca;
-    }
 }
 
 .bonjourBackgroundImg {
     position: absolute;
     width: 100%;
-    height: inherit;
+    height: -webkit-fill-available;
 
+    filter: grayscale(1);
     opacity: 0;
-    animation: fadeInBgImg 0.8s 0s ease forwards;
+    animation: fadeInBgImg 0.8s 0.5s ease forwards, animGraysclaeBg 7s 1.5s ease forwards;
 }
 @keyframes fadeInBgImg {
     from {
@@ -92,11 +67,22 @@ body {
         opacity: 0.4;
     }
 }
+@keyframes animGraysclaeBg {
+    from {
+        filter: grayscale(1);
+
+    }
+    to {
+        filter: grayscale(0) saturate(1.1);
+
+    }
+}
+
+
 
 .hotAirBallonImg {
     position: absolute;
     height: 100px;
-    filter: drop-shadow(2px 1px 2px #1f69a9);
 
     right: 80px;
     bottom: 300px;
@@ -107,59 +93,47 @@ body {
 @keyframes hotAirBallonAnim {
     0% {
         opacity: 0;
-        /* filter: blur(1px); */
         bottom: 300px;
         right: 80px;
     }
     10% {
         opacity: 1;
-        /* filter: blur(0px); */
         right: 110px;
     }
     20% {
         opacity: 0.8;
-        /* filter: blur(1px); */
         right: 80px;
     }
     30% {
         opacity: 1;
-        /* filter: blur(0px); */
         right: 110px;
     }
     40% {
         opacity: 0.8;
-        /* filter: blur(1px); */
         right: 80px;
     }
     50% {
         opacity: 1;
-        /* filter: blur(0px); */
         right: 110px;
     }
     60% {
-        opacity: 0.8;
-        /* filter: blur(1px); */
-    
+        opacity: 0.8;    
         right: 80px;
     }
     70% {
         opacity: 1;
-        /* filter: blur(0px); */
         right: 110px;
     }
     80% {
         opacity: 0.8;
-        /* filter: blur(1px); */
         right: 80px;
     }
     90% {
         opacity: 1;
-        /* filter: blur(0px); */
         right: 110px;
     }
     100% {
         opacity: 0.95;
-        /* filter: blur(1px); */
         bottom: 700px;
 
         right: 110px;
@@ -174,7 +148,6 @@ body {
         
     }
     50% {
-        /* right: 90px; */
         bottom: 680px;
     }
     75% {
@@ -225,7 +198,7 @@ body {
     left: 0;
     
     opacity: 0;
-    animation: fadeInForest 1.5s 0.7s ease forwards;
+    animation: fadeInForest 1.5s 1.4s ease forwards;
 }
 @keyframes fadeInForest {
     from {
@@ -233,6 +206,15 @@ body {
     }
     to {
         opacity: 0.9;
+    }
+}
+
+@keyframes animPositionForest {
+    from {
+        bottom: 0;
+    }
+    to {
+        bottom: -120px;
     }
 }
 
@@ -244,16 +226,13 @@ a {
 
 
 
+
 .wrapper {
     position: relative;
     z-index: 15;
-    /* top: 35%;
-    left: 50%;
-    transform: translate(-50%, -65%); */
     left: 50%;
     transform: translateX(-50%);
 
-    /* padding: 100px 0px; */
     margin: 50px 0px 30px 0px;
 
 
@@ -263,23 +242,39 @@ a {
 
 .disclaimer {
     position: relative;
+    bottom: 20px;
+
     z-index: 15;
     color: white;
     text-align: center;
-    width: 100%;
+    width: fit-content;
+    justify-content: center;
+    display: inline-flex;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 5px 10px;
+    border-radius: 9px;
+
+    font-family: Open Sans,sans-serif;
+    font-size: 0.75em;
+
+    background-color: #082c412b;
+    backdrop-filter: blur(2px);
+
+    opacity: 0;
+    animation: fadeIn 0.7s 3s ease forwards;
 }
 
 .sectionPresentation {
     font-family: Open Sans,sans-serif;
     position: relative;
     z-index: 11;
-    /* bottom: 50px; */
 
     width: 80%;
     margin: 0 auto;
 
     opacity: 0;
-    animation: fadeInSectionPresentation 1s 2.5s ease forwards;
+    animation: fadeInSectionPresentation 1s 2.6s ease forwards;
 }
 @keyframes fadeInSectionPresentation {
     from {
@@ -297,7 +292,7 @@ a {
 
     border-bottom-left-radius: 34px;
 
-    animation: dropShadow 0.5s 2s ease forwards;
+    animation: dropShadow 0.3s 2s ease forwards;
 
 }
 @keyframes dropShadow {
@@ -305,14 +300,11 @@ a {
         filter: none;
     }
     to {
-        filter: drop-shadow(1px 1px 0px #1f69a9);
+        filter: drop-shadow(2px 2px #436f8f);
     }
 }
 
 .basileSvgContainer {
-    /* width: 250px;
-    height: 250px;  */
-
     width: 19px;
     height: 18px;
     border-bottom-left-radius: 0px;
@@ -324,7 +316,6 @@ a {
 
 .bonjourSvgPath {
     opacity: 1;
-    /* transform: scale(10); */
 
     fill: none; 
     stroke: var(--primaryColor); 
@@ -341,7 +332,6 @@ a {
 
 .basileSvgPath {
     opacity: 1;
-    /* transform: scale(10); */
 
     fill: none; 
     stroke: var(--white); 
@@ -350,9 +340,6 @@ a {
     stroke-linejoin:  miter; 
     stroke-miterlimit: 4;
     transition: stroke 0.8s ease;
-
-    
-    /* animation: logoColorSwitch 1.5s 1.7s ease forwards; */
 }
 
 
@@ -361,7 +348,6 @@ a {
         stroke: var(--primaryColor); 
     }
     to {
-        /* stroke: var(--white);  */
         stroke: #ffc862;
     }
 }
@@ -406,7 +392,7 @@ a {
     display: block;
     overflow: hidden;
 
-    text-shadow: 2px 2px #e09000;
+    text-shadow: 2px 2px #436f8f;
 
     animation: fadeInText 1.5s 1.7s ease forwards;
 }
@@ -434,17 +420,55 @@ a {
 
 
 .presentationParagraph {
+    position: relative;
     font-family: Open Sans,sans-serif;
     color: var(--white);
-    width: 80%;
+    width: 53%;
     margin: 0 auto;
     text-align: left;
 
-    background-color: #194e7dc9;
+    background: #21606f85;
+    background: -webkit-linear-gradient(to bottom, #6f6e2185, #2193b0);
+    background: linear-gradient(to bottom, #6f6e2185, #2193b0);
+
     padding: 13px 17px;
     border-radius: 12px;
-    box-shadow: 3px 3px 1px 1px #deb873;
+    box-shadow: 3px 3px 1px 1px #d7aa58;
+
+    transition: all 1.2s;
 }
+
+
+.hideBtn {
+    position: absolute;
+    cursor: pointer;
+    right: 7px;
+    top: -19px;
+    background-color: #ffc863;
+    padding: 0px 4px;
+    font-size: 1.3em;
+    color: #005598c9;
+    box-shadow: 2px 2px #00559899;
+    border-radius: 5px;
+    transition: all 0.3s;
+}
+.hideBtn:hover {
+    opacity: 0.8;
+    transform: scale(1.1);
+}
+
+.presentationParagraphHide {
+    /* background: rgba(255, 255, 255, 0) !important; */
+    background: #215f6f00 !important;
+    background: -webkit-linear-gradient(to bottom, #6f6e2100, #2193b000) !important;
+    background: linear-gradient(to bottom, #6f6e2100, #2193b000) !important;
+    box-shadow: 0px 0px 0px 0px #deb97300 !important;
+    color: transparent !important;
+}
+
+
+
+
 
 .wrapperName {
     display: inline-flex;
@@ -453,11 +477,11 @@ a {
 
 
 
-
 strong {
     color: #ffcb6c;
+    font-weight: bold;
+    text-shadow: 1px 1px #0000003b;
 }
-
 
 
 
@@ -479,8 +503,8 @@ strong {
 
 .portfolioLink {
     position: relative;
-    color: #1e356b;
-    margin: 40px auto 30px auto;
+    color: #235585;
+    margin: 40px auto 15px auto;
     width: fit-content;
     padding: 14px 16px;
     background-color: #ffc862;
@@ -488,15 +512,13 @@ strong {
     display: block;
     text-align: center;
     font-weight: bold;
-    box-shadow: 5px 5px #002a4c;
-
-    /* border: 1px solid #2892cf; */
+    box-shadow: 5px 5px #235585;
 
     transition: all 0.3s;
 }
 .portfolioLink:hover {
     color: #ffc862;
-    background-color: #1e356b;
+    background-color: #235585;
     letter-spacing: 1px;
 
     box-shadow: 5px 5px #ffc862;
@@ -504,7 +526,8 @@ strong {
 
 
 .socialBtn {
-    color: var(--white);
+    color: #3671aa;
+    transform: scale(1.1);
 
     transition: all 0.3s;
 }
@@ -512,6 +535,29 @@ strong {
     color: #ffc862;
     transform: scale(1.3);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -527,11 +573,22 @@ strong {
     }
 
     body {
-        height: 150vh;
+        width: 100%;
+        height: 100%;
+
+        animation: none;
+
     }
 
     .bonjourBackgroundImg {
+        width: 100%;
+        height: inherit;
+
         object-fit: cover;
+        filter: saturate(1.5);
+
+        animation: fadeInBgImg 0.8s 0.5s ease forwards;
+
     }
 
     .extensionFunTitle {
@@ -549,7 +606,6 @@ strong {
     }
 
     .forestPng {
-        width: auto;
         object-fit: cover;
     }
 
@@ -559,15 +615,26 @@ strong {
         left: 50%;
         transform: translate(-50%, -0%);
         padding: 15px 0px 15px 0px;
+        margin: 10px 0px 5px 0px;
 
     }
 
 
+    .socialBtn {
+        color: #ffc862;
+        transform: scale(1.1);
+    
+    
+        transition: all 0.3s;
+    }
+    .socialBtn:hover {
+        color: #3671aa;
+        transform: scale(1.3);
+    }
+
 
     .sectionPresentation {
         position: relative;
-        /* bottom: 50px; */
-        /* bottom: 130px; */
         bottom: 0;
 
         width: 100%;
@@ -578,21 +645,19 @@ strong {
         width: 130px;
         height: 130px; 
 
-        animation: dropShadow 0.5s 2s ease forwards;
+        animation: dropShadow 0.3s 2s ease forwards;
     }
     @keyframes dropShadow {
         from {
             filter: none;
         }
         to {
-            filter: drop-shadow(1px 2px 3px black);
+            filter: drop-shadow(1px 1px #436f8f);
         }
     }
 
 
     .basileSvgContainer {
-        /* width: 130px;
-        height: 130px;  */
         width: 17px;
         height: 18px;
         border-bottom-left-radius: 0px;
@@ -642,20 +707,29 @@ strong {
         font-family: Open Sans,sans-serif;
         color: var(--white);
         width: 80%;
+        font-size: 0.9em;
         margin: 0 auto;
         text-align: justify;
 
-        background-color: #194e7de8;
+        background: #21606f85;
+        background: -webkit-linear-gradient(to bottom, #6f6e2185, #2193b0);
+        background: linear-gradient(to bottom, #6f6e2185, #2193b0);
+
+
         padding: 13px 15px;
         border-radius: 12px;
+
+        box-shadow: 0px 0px 0px 0px #deb873;
+        width: 80%;
+        padding: 28px 30px;
+        border-radius: 10px;
     }
 
 
     .portfolioLink {
         position: relative;
-        margin: 40px auto 40px auto;
+        margin: 40px auto 20px auto;
         width: fit-content;
-        /* padding: 10px 16px; */
         padding: 14px 16px;
         background-color: #ffc862;
         border-radius: 5px;
@@ -663,6 +737,109 @@ strong {
         text-align: center;
         font-weight: bold;
     }
+
+
+    .frstStrong {
+        color: #a1d5ff;
+        text-shadow: 0 0 #67676700;
+    }
+
+
+
+
+    .hotAirBallonImg {
+        position: absolute;
+        height: 60px;
+    
+        right: 30px;
+        top: 250px;
+        opacity: 0;
+    
+        animation: hotAirBallonAnim 30s 3s ease forwards 1, fixedBallon 5.5s 33s ease-in-out infinite;
+    }
+    @keyframes hotAirBallonAnim {
+        0% {
+            opacity: 0;
+            top: 250px;
+            right: 30px;
+        }
+        10% {
+            opacity: 1;
+            right: 50px;
+        }
+        20% {
+            opacity: 0.8;
+            right: 30px;
+        }
+        30% {
+            opacity: 1;
+            right: 50px;
+        }
+        40% {
+            opacity: 0.8;
+            right: 30px;
+        }
+        50% {
+            opacity: 1;
+            right: 50px;
+        }
+        60% {
+            opacity: 0.8;
+        
+            right: 30px;
+        }
+        70% {
+            opacity: 1;
+            right: 50px;
+        }
+        80% {
+            opacity: 0.8;
+            right: 30px;
+        }
+        90% {
+            opacity: 1;
+            right: 50px;
+        }
+        100% {
+            opacity: 0.95;
+            top: 30px;
+    
+            right: 30px;
+        }
+    }
+    @keyframes fixedBallon {
+        0% {
+            top: 30px;
+        }
+        50% {
+            top: 40px;
+        }
+        100% {
+            top: 30px;
+        }
+    }
+    
+
+
+
+
+
+    .disclaimer {
+
+        width: 85%;
+        position: relative;
+        bottom: 20px;
+
+        padding: 3px 10px;
+
+        font-family: Open Sans,sans-serif;
+        font-size: 0.75em;
+
+        background-color: #082c412b;
+        backdrop-filter: blur(2px);
+    }
+
+
 
 
 
@@ -682,11 +859,74 @@ strong {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* 2K FHD */
-@media only screen and (min-width: 1300px) {
+@media only screen and (min-width: 2000px) {
+
+
+    body {
+        height: 100vh;
+    }
+
 
     .presentationParagraph {
-        width: 65%;
+        width: 39%;
+        font-size: 1.1em;
     }
 
 }
