--- a/css/styleCandidature2.css
+++ b/css/styleCandidature2.css
@@ -85,16 +85,28 @@ time, mark, audio, video {
 
 .disclaimer {
     color: rgb(207, 207, 207);
-    width: 100%;
-    text-align: center;
+    /* width: 100%; */
+    width: 200px;
+
+    font-size: 0.8em;
+
+    /* text-align: center; */
+    text-align: justify;
+
     position: absolute;
-    /* bottom: 0; */
-    top:97%;
+    right: 10px;
+
+    /* top:97%; */
+    /* top: 100%; */
+    bottom: 0;
+
     font-style: italic;
 }
 
 
 body {
+    position: relative;
+
     height: 110vh;
     margin: 0;
     padding: 0;
@@ -971,21 +983,33 @@ strong {
 
 
     body {
-        height: 145vh; 
+        /* height: 145vh;  */
+        width: 100%;
+        height: 100%;
+
+        position: relative;
     }
     .disclaimer { 
-        top: 135vh;
+        /* top: 135vh; */
+        position: relative;
+        width: 95%;
+        margin: 15px auto;
+        text-align: center;
+        right: 0px;
     }
 
     .content {
         animation: none;
+
+        position: relative;
     }
     .presentationParagraph {
         animation: none;
         padding-top: 0;
     }
     .youWantMePng {
-        top: 45px;
+        /* top: 45px; */
+        transform: translateY(-90px);
         animation: fadeInYouWantMe 0.5s 0s ease forwards;
     }
 
