--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -2599,7 +2599,10 @@
         /* left: -4px; */
         left: 1px;
 
-        background-color: #ef3b2d24;
+        /* background-color: #ef3b2d24; */
+        background-color: #d1594f59;
+        /* background-color: #2defc024;
+        border: 1px solid #ffffff12; */
     }
 
 
