--- a/css/styleCandidature2.css
+++ b/css/styleCandidature2.css
@@ -568,7 +568,7 @@ a {
     fill: none; 
     stroke: var(--primaryColor); 
     stroke-width: 20; 
-    stroke-linecap: square; 
+    stroke-linecap: round; 
     stroke-linejoin:  miter; 
     stroke-miterlimit: 4;
     transition: stroke 0.8s ease;
