--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -295,6 +295,11 @@
         font-size: 1.5em;
         /* text-shadow: 0px 0px 5px black; */
         text-shadow: 2px 0px 3px black;
+
+        background-color: #181b247d;
+        backdrop-filter: blur(6px);
+        border-radius: 7px;
+        padding: 3px 10px 0px 10px;
     }
 
     .projetTitleSF-mobile {
