--- a/css/style.css
+++ b/css/style.css
@@ -1743,7 +1743,8 @@ ul {
       border-radius: 3px;
       /* background-color: #ef3a2daf; */
       /* background-color: #9b3c34; */
-      background-color: #762e33;
+      /* background-color: #762e33; */
+      background-color: #a93840;
       color: #E7E8F2;
       border: 1px solid var(--secondaryColorVeryMat);
 
