--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -225,8 +225,8 @@
     .closeModal {
         position: absolute;
         z-index: 99999999;
-        top: 65px;
-        right: 19px;
+        top: 48px;
+        right: 20px;
         color: #f1f1f1;
         font-size: 4em;
         font-weight: bold;
@@ -364,7 +364,7 @@
         margin-top: 30px;
         margin-block-end: 0.9em;
         font-size: 2.5em;
-        -webkit-box-reflect: below -4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
+        -webkit-box-reflect: below -7px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.55, transparent), to(white));
         /* opacity: 0;
 
         animation: flickeringTitle 1.5s 0.25s forwards !important; */
@@ -405,8 +405,8 @@
     .galerieDiv {
         margin: 0 0px;
         padding: 15px;
-        background-color: #00000054;
-        box-shadow: 0 0 24px -10px #19ddbcb3;
+        /* background-color: #00000054;
+        box-shadow: 0 0 24px -10px #19ddbcb3; */
 
         border-radius: 18px;
 
@@ -1276,7 +1276,7 @@
         transform: perspective(1220px) rotateY(83deg) scale(0.79);
         opacity: 0;
         /* bottom: 25px; */
-        bottom: 2px;
+        bottom: -10px;
 
         animation: fadeInRotateIframeMobile 2s 0.5s ease forwards !important;
     }
@@ -1310,6 +1310,12 @@
 
     .lienBJJ {
         margin-block-end: 0em;
+    }
+
+    .separator-mobile-project {
+        height: 5px;
+        width: 50%;
+        background-color: red;
     }
 
 
@@ -1432,7 +1438,7 @@
     }
 
     .modal {
-        padding-top: 95px;
+        padding-top: 130px;
     }
     .close {
         top: 82px;
@@ -2512,7 +2518,8 @@
         position: fixed !important;
         display: none;
 
-        right: 13px;
+        /* right: 13px; */
+        right: 9px;
         top: 5px;
         z-index: 999999999;
 
@@ -2521,7 +2528,7 @@
         padding: 3px 7px;
         border-radius: 12px;
 
-        border: 1px solid #ffffff3a;
+        border: 0px solid #ffffff3a;
 
         animation: fadeIn 0.4s 0s ease forwards;
     }
@@ -3979,7 +3986,10 @@
     #openBtn {
         filter: drop-shadow(1px 2px 3px black);
         position: absolute;
-        right: 10px;
+
+        /* right: 10px; */
+        right: 5px;
+
         top: 9px;
         width: 44px;
         height: 59px;
