--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -1052,6 +1052,10 @@
     .pdh4 {
         box-shadow: 0 -40px 12px 1px #e8ca7d;
     }
+    .pdh5 {
+        /* box-shadow: 0 -40px 12px 1px #cbdaff; */
+        box-shadow: 0 -40px 12px 1px #00ffff;
+    }
 
 
 
